Bug 2013162 - Tweak AI Controls box bg and group spacing r=desktop-theme-reviewers,jules,akulyk
Differential Revision: https://phabricator.services.mozilla.com/D281266

--- a/browser/themes/shared/preferences/preferences.css
+++ b/browser/themes/shared/preferences/preferences.css
@@ -1445,11 +1445,15 @@ setting-group[groupid="history"] > moz-card > moz-fieldset::part(inputs) {
 
 setting-group[groupid="aiFeatures"] {
   --select-max-width: fit-content;
+
+  > moz-card > moz-fieldset::part(inputs) {
+    gap: var(--space-xlarge);
+  }
 }
 
 #blockAiGroup {
   @media not (prefers-contrast) {
-    --block-ai-background-color: light-dark(color-mix(in srgb, currentColor 2%, transparent), color-mix(in srgb, currentColor 5%, transparent));
+    --block-ai-background-color: light-dark(color-mix(in srgb, currentColor 3%, transparent), color-mix(in srgb, currentColor 5%, transparent));
     background-color: var(--block-ai-background-color);
   }
 }
